--- a/public/assets/css/style-mensagens.css
+++ b/public/assets/css/style-mensagens.css
@@ -1,282 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    display: flex; 
-    width: 100%;
-    flex-direction: column;
-    min-height: 100vh;
-    
-    background-color: #e3e9f7;
-}
-
-header{
-    display: flex;
-    background-color: #ffb6c1;
-    justify-content: start;
-    align-items: start;
-    z-index: 3;
-    position: fixed;
-    
-}
-
-
-main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-   /* grid-template-columns: repeat(3, 2fr);*/
-    /*padding: 20px;*/
-    /*position: fixed;*/
-    padding: 0;
-    z-index:2 ;
-    /*padding-left: calc(62px + 20px);*/
-}
-
-#sidebar {
-    padding-top: 5.6%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #ffffff;
-    height: 100vh;
-
-    position: relative;
-    transition: all .5s;
-    min-width: 82px;
-    z-index: 1;
-    position: fixed;
-}
-
-#sidebar_content {
-    padding: 12px;
-}
-
-#user {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-bottom: 24px;
-}
-
-#user_avatar {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 20px;
-}
-
-#user_infos {
-    display: flex;
-    flex-direction: column;
-}
-
-#user_infos span:last-child {
-    color: #6b6b6b;
-    font-size: 12px;
-}
-
-#side_items {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    list-style: none;
-}
-
-.side-item {
-    border-radius: 8px;
-    padding: 14px;
-    cursor: pointer;
-}
-
-.side-item.active {
-    background-color: #e3e9f7;
-}
-
-.side-item:hover:not(.active),
-#logout_btn:hover {
-    background-color: #e3e9f7;
-}
-
-.side-item a {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #FF007f;
-}
-
-.side-item.active a {
-    color: #ff007f;
-}
-
-.side-item a i {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 20px;
-    height: 20px;
-}
-
-#logout {
-    border-top: 1px solid #e3e9f7;
-    padding: 12px;
-    margin-bottom: 20px;
-}
-
-#logout_btn {
-    border: none;
-    border-style: none;
-    padding: 12px;
-    font-size: 14px;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    border-radius: 8px;
-    text-align: start;
-    cursor: pointer;
-    outline: none;
-    background-color: transparent;
-    color: #ff007f;
-}
-
-#open_btn {
-    position: absolute;
-    top: 30px;
-    right: -10px;
-    background-color: transparent;
-  
-    border-radius: 100%;
-    width: 20px;
-    height: 20px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
-#open_btn>i{
-    width: 25%;
-    color:#ffb6c1;
-}
-#open_btn_icon {
-    transition: transform .3s ease;
-}
-
-.open-sidebar #open_btn_icon {
-    transform: rotate(180deg);
-}
-
-.item-description {
-    width: 200px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-size: 14px;
-    font-family: 'Fredoka';
- 
- 
-}
-
-#sidebar.open-sidebar {
-    min-width: 15%;
-}
-
-
-#sidebar.open-sidebar .item-description {
-    width: 150px;
-    height: auto;
-}
-
-#sidebar.open-sidebar .side-item a {
-    justify-content: flex-start;
-    gap: 14px;
-}
-#sidebar.open-sidebar .side-item a span{
-    display: flex;
-}
-.conteudo-home{
-    display:flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    margin-top:70px ;
-    padding-left: calc(62px + 20px);
-}
-main .nav-header-conteudo{
-    display:flex;
-    padding: 0;
-    flex-direction: row;
-    width: 100%;
-    height:80px;
-    z-index: 1;
-    background-color: #f26699;
-    position: fixed;
-}
-.nav-header-conteudo .nav-top{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    padding: 10px;
-    height: 100%;
-    
-    align-items: center;
-}
-.nav-header-conteudo .nav-top .cont-nav-titulo{
-    display: flex;
-    width: 50%;
-    height: 100%;
-    align-items:flex-start;
-}
-.nav-header-conteudo .nav-top .cont-nav-titulo h1{
-    padding-left: 9px;
-    font-family: 'Fredoka';
-    color: white;
-}
-.nav-header-conteudo .nav-top .cont-buscador{
-    display: flex;
-    width: 50%;
-    height: 100%;
-    justify-content: end;
-    
-    align-items: center;
-}
-.nav-header-conteudo .nav-top .cont-buscador form {
-    min-width: 400px;
-    background-color: #be3c74;
-    border-radius: 50px 50px;
-}
-.nav-header-conteudo .nav-top .cont-buscador form input, input::-webkit-input-placeholder{
-    width: 90%;
-    padding: 10px;
-    font-family: "Inter";
-    background-color: transparent;
-    color: white;
-    border: none;
-}
-.nav-header-conteudo .nav-top .cont-buscador form input:focus{
-    outline: none;
-}
-.nav-header-conteudo .nav-top .cont-buscador form button{
-    border: none;
-    outline: none;
-    background-color: transparent;
-}
-.nav-header-conteudo .nav-top .cont-buscador form button i{
-    color: white;
-}
-.logo{
-    width: 5%;
-    right: 5%;
-}
-html, body {
-    height: 100%;
-    margin: 0%;
-}
 
 .grid-container {
     display: grid;
@@ -431,9 +153,10 @@ html, body {
     font-family: 'Fredoka';
 }
 .img-fluid3{
-    height: 10%;
-    width: 10%;
-    border-radius: 200%;
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    object-fit: fill;
 
 }
 .img-fluid5{
