--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -249,10 +249,12 @@ form button:hover{
 }
 
 .box-img{
+    position: fixed;
     background-color: #F26699;
     color: white;
-    height: 100%;
+    height: 100vh;
     width: 50%;
+    left: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
