--- a/public/assets/css/style-feed.css
+++ b/public/assets/css/style-feed.css
@@ -44,8 +44,10 @@
 }
 
 .card-post .post-head img{
-    width: 10%;
-    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border-radius:100% ;
+    object-fit: fill;
     margin-right: 5px;
 }
 .card-post .post-head small{
