--- a/public/assets/css/styles-home.css
+++ b/public/assets/css/styles-home.css
@@ -79,8 +79,8 @@ main {
 #user_avatar {
     width: 50px;
     height: 50px;
-    object-fit: cover;
-    border-radius: 20px;
+    object-fit: fill;
+    border-radius: 100%;
 }
 
 #user_infos {
