--- a/public/assets/css/style-modal-post.css
+++ b/public/assets/css/style-modal-post.css
@@ -97,25 +97,72 @@
 .modal-post form {
     display: flex;
     width: 100%;
+    height: 100%;
     flex-direction:row ;
-    justify-content: space-around;
-    align-items: start;
+    
 }
 .modal-post form .cont-img-post{
     display: flex;
     width: 100%;
+    min-height: 100%;
     justify-content: center;
     margin-right: 20px;
-    align-items: start;
+    
+    align-items: center;
+}
+.modal-post form .cont-img-post .img-view{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.modal-post form .cont-img-post #drag-area{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: 6px;
+    align-items: center;
+    justify-content: center;
+    border: 2px #f26699 dashed;
+    cursor: pointer;
+}
+.modal-post form .cont-img-post .drag-area.active{
+    border: 2px solid #f26699
+}
+.modal-post form .cont-img-post #drag-area .icon{
+    font-size: 100px;
+    color: #F26699;
+}
+.modal-post form .cont-img-post .drag-area h5{
+   font-weight: bold;
+    color: #003366;
+    font-family: 'Inter';
 }
 
+.modal-post form .cont-img-post #drag-area .img-view{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.modal-post form .cont-img-post .drag-area span{
+    font-size: 20px;
+    color: #F26699;
+    font-family: 'Inter';
+}
 .modal-post form .cont-img-post .input-group{
     display: flex;
     flex-direction: column ;
-    
 }
 
-.modal-post form .cont-img-post .input-group .btnImg, .modal-post form .cont-btn-criar-post button{
+.modal-post form .cont-img-post .btnImg, .modal-post form .cont-btn-criar-post button{
     justify-content: center;
     align-items: center;
     width: 40%;
@@ -130,7 +177,7 @@
     transition: all 0.3s ease;
     margin-top: 20px;
 }
-.modal-post form .cont-img-post .input-group .btnImg:hover, .modal-post form .cont-btn-criar-post button:hover{
+.modal-post form .cont-img-post  .btnImg:hover, .modal-post form .cont-btn-criar-post button:hover{
     background-color: #cc5379;
     transform: scale(1.05);
 }
