--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -74,10 +74,24 @@ body, html {
 
 .login h2 {
     font-size: 60px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     color: #F26699;
     text-align: center;
     font-weight: normal;
+}
+.cont-status {
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.cont-status h4{
+    font-family: 'Inter';
+    color: #003366;
+    font-size: 20px;
 }
 
 .input-group {
