--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -26,14 +26,11 @@ body, html {
 }
 
 .primeiro-container {
-    background-color: #F26699;
-    color: white;
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     text-align: center;
 }
 
@@ -49,6 +46,24 @@ body, html {
 
 .logo p {
     font-size: 18px;
+}
+
+.carousel-container {
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    overflow: hidden;
+}
+
+.carousel-slide {
+    display: flex;
+    width: 300%;
+    transition: transform 0.4s ease-in-out;
+}
+
+.carousel-slide img {
+    width: 36%;
+    height: auto;
 }
 
 .segundo-container {
