--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -128,6 +128,13 @@ form .input-group label span{
     font-size: 14px;
     text-align: start;
 }
+form .input-group i{
+    position: absolute;
+    right: 3%;
+    font-size: 25px;
+    color: #F26699;
+    cursor: pointer;
+}
 form  .cont-input label .icon-input{
     width: 30px;
     margin-right: 5px;
