--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -253,20 +253,20 @@ form button:hover{
     background-color: #F88AC5;
 }
 
-.box-img{
-    position: fixed;
-    background-color: #F26699;
-    color: white;
-    height: 100vh;
-    width: 50%;
-    left: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.carousel-container {
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    overflow: hidden;
 }
 
-.box-img img{
-    width: 500px;
+.carousel-slide {
+    display: flex;
+    width: 300%;
+    transition: transform 0.4s ease-in-out;
+}
+
+.carousel-slide img {
+    width: 36%;
+    height: auto;
 }
