--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -36,7 +36,7 @@ body{
 
 .cont-form{
     display: flex;
-    width: 60%;
+    width: 50%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -75,7 +75,7 @@ body{
 }
 
 .cont-head .cont-titulo h2{
-    font-size: 40px;
+    font-size: 45px;
     color: #F26699;
     text-align: center;
     font-weight: normal;
@@ -98,7 +98,7 @@ body{
     border: none;
     border-radius: 10px;
     background-color: #8c898a;
-    color: white;
+    color: #ffffff;
     font-size: 1rem;
     cursor: pointer;
     text-decoration: none;
@@ -256,17 +256,17 @@ form button:hover{
 .carousel-container {
     width: 100%;
     height: 100%;
-    max-width: 900px;
+    max-width: 670px;
     overflow: hidden;
 }
 
 .carousel-slide {
     display: flex;
-    width: 290%;
+    width: 300%;
     transition: transform 0.4s ease-in-out;
 }
 
 .carousel-slide img {
-    width: 35%;
+    width: 38%;
     height: auto;
 }
