--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -50,7 +50,6 @@ body{
     justify-content: center;
     align-items: center;
     padding-top: 10px;
-
 }
 
 .cont-head{
@@ -256,17 +255,18 @@ form button:hover{
 .carousel-container {
     width: 100%;
     height: 100%;
-    max-width: 670px;
+    max-width: 880px;
     overflow: hidden;
 }
 
 .carousel-slide {
+    height: 100%;
     display: flex;
-    width: 300%;
+    width: 350%;
     transition: transform 0.4s ease-in-out;
 }
 
 .carousel-slide img {
-    width: 38%;
+    width: 30%;
     height: auto;
 }
