--- a/public/assets/css/style-config-perfil.css
+++ b/public/assets/css/style-config-perfil.css
@@ -50,7 +50,31 @@
     flex-direction: column ;
    
 }
+.cont-editar-perfil form .input-group #drag-area{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: 6px;
+    align-items: center;
+    justify-content: center;
+    border: 2px #f26699 dashed;
+    cursor: pointer;
+}
 
+.cont-editar-perfil form .input-group #drag-area .icon i{
+    font-size: 50px;
+    color: #F26699;
+}
+.cont-editar-perfil form .input-group #drag-area .img-view{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .cont-editar-perfil form .input-group{
     display: flex;
     width: 100%;
