--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -56,12 +56,21 @@ body, html {
 .segundo-container {
     flex: 1;
     display: flex;
+    
     width: 100%;
     min-height: 100%;
     justify-content: center;
     align-items: center;
 }
 
+
+.cont-img-mobile{
+    display: none;
+}
+
+.cont-img-mobile img{
+    width: 40%;
+}
 .login {
     display: flex;
     flex-direction: column;
@@ -248,6 +257,17 @@ button:hover {
 
     .primeiro-container{
         display: none;
+    }
+    .segundo-container {
+        flex-direction: column;
+    }
+    .cont-img-mobile{
+        display: flex;
+        width: 100%;
+        height: 300px;
+        padding-top: 20%;
+        justify-content: center;
+        align-items: center;
     }
     
 }
