--- a/public/assets/css/style-modal-post.css
+++ b/public/assets/css/style-modal-post.css
@@ -3,20 +3,20 @@
     width: 100%;
     height: 100%;
     background-color: transparent;
-
     align-items: center;
     justify-content: center;
     color: #FF007f;
     border: none;
     cursor: pointer;
 }
+
 .side-item button span{
     display: flex;
     justify-content: start;
     align-items: center;
     color: #FF007f;
-
 }
+
 .side-item button:focus{
     border: none;
     outline: none;
@@ -51,7 +51,6 @@
     border: solid 1px #ccc;
     border-radius: 8px;
     padding: 20px;
-    
     background: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     justify-content: center;
@@ -107,7 +106,6 @@
     min-height: 100%;
     justify-content: center;
     margin-right: 20px;
-    
     align-items: center;
 }
 .modal-post form .cont-img-post .img-view{
@@ -174,12 +172,12 @@
     color: white;
     margin-right: 10px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     margin-top: 20px;
 }
 .modal-post form .cont-img-post  .btnImg:hover, .modal-post form .cont-btn-criar-post button:hover{
-    background-color: #cc5379;
-    transform: scale(1.05);
+    background-color: #ef6d96;
+    transform: scale(1.01);
 }
 .modal-post form .cont-img-post .input-group input[type='file']{
     display: none;
@@ -238,14 +236,15 @@
     height: 200px;
     padding: 10px;
     border: 2px #f26699 solid;
-    border-radius: 10px ;
+    border-radius: 10px;
     transition: all 0.3s ease;
     font-size: 15px;
     resize: none;
 }
+
 .modal-post form textarea:focus{
     border: 4px solid #F26699;
-    transform: scale(1.04);
+    transform: scale(1.01);
     outline:none;
 }
 
@@ -265,19 +264,19 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    border-radius: 10px;
-    background-color: #7a7879;
+    border-radius: 5px;
+    background-color: #9b9b9b;
     font-family: 'Inter';
     color: white;
     margin-right: 20px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     font-size: 10px;
    
 }
 .modal-post form .cont-categoria .label-checkbox:hover{
     background-color:#7a7879 ;
-    transform: scale(1.05);
+    transform: scale(1.01);
 }
 .modal-post form .cont-categoria .label-active{
     
@@ -287,11 +286,12 @@
 
 .modal-post form .cont-categoria .label-active:hover{
     background-color: #d5527b;
-    transform: scale(1.05);
+    transform: scale(1.00);
 }
 .modal-post form .cont-categoria input[type='checkbox']{
     display: none;
 }
+
 .modal-post form .cont-btn-criar-post{
     display: flex;
     width: 100%;
