--- a/public/assets/css/style-config-gerais.css
+++ b/public/assets/css/style-config-gerais.css
@@ -23,11 +23,12 @@
 
 .cont-config-gerais h1{
     font-family: 'Fredoka';
-    font-size: 30px;
+    font-size: 34px;
     font-weight: normal;
     text-align: center;
     color: #f26699;
 }
+
 .cont-config-gerais .cont-item-config{
     display: flex;
     width: 100%;
@@ -35,24 +36,24 @@
     justify-content: center;
     align-items: center;
 }
+
 .cont-config-gerais .cont-item-config .card-config{
     display: flex;
     width: 700px;
     height: 150px;
     flex-direction: row;
-    
     align-items: center;
-    padding: 10px;
-    background-color: rgb(246, 246, 246);
+    padding: 14px;
+    background-color: #f6f6f6;
     border-radius: 20px;
     transition: all 0.2s ease-in-out;
     margin-bottom: 20px;
-    
 }
+
 .cont-config-gerais .cont-item-config .card-config:hover{
-    margin-bottom: 30px;
-    transform: scale(1.05);
+    transform: scale(1.01);
 }
+
 .cont-config-gerais .cont-item-config .card-config a{
     text-decoration: none;
     display: flex;
@@ -61,6 +62,7 @@
     align-items: center;
     justify-content: start;
 }
+
 .cont-config-gerais .cont-item-config .card-config img{
     width: 80px;
     height: 80px;
@@ -68,6 +70,7 @@
     border-radius: 100%;
     object-fit: fill;
 }
+
 .cont-config-gerais .cont-item-config .card-config .cont-desc-config{
     display: flex;
     width: 100%;
@@ -82,6 +85,7 @@
     color: #003366;
     text-align: center;
     justify-content: start;
+
 }
 .cont-config-gerais .cont-item-config .card-config .cont-desc-config h6{
     font-family: 'Inter';
@@ -114,14 +118,18 @@
     background-color: #ff85ab;
     font-family: 'Fredoka';
     color: white;
-    font-size: 1rem;
+    font-size: 1.1rem;
     text-decoration:none;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     margin-top: 20px;
 }
 
 .cont-logout a:hover{
-    background-color: #dc437b;
-    transform: scale(1.04);
+    background-color: #d5527b;
+    transform: scale(1.01);
+}
+
+.txt-item{
+    margin-top: 5px;
 }
