--- a/public/assets/css/clientes-adm.css
+++ b/public/assets/css/clientes-adm.css
@@ -37,14 +37,14 @@
 
 .cont-clientes{
     display: flex;
-    width: 100%;
+    width: auto;
     height: 100%;
     flex-direction: column;
     padding: 20px;
 }
 .cont-card-num-cadastro{
     display: flex;
-    width: 100%;
+    width: 30%;
     height: auto;
 }
 
@@ -105,11 +105,7 @@
     stroke-dasharray: 110;
     stroke-dashoffset: 92;
 }
-.cont-card-num-cadastro .sales{
-    display: flex;
-    width: 100%;
-    height: auto;
-}
+
 .cont-card-num-cadastro .sales svg circle{
     stroke-dashoffset: -140;
     stroke-dasharray: 200;
@@ -146,7 +142,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: var(--color-white);
     border: 10px;
     padding: 30px;
@@ -241,16 +237,85 @@
 }
 
 .lista-user{
+    position: relative;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: auto;
     height: auto;
+    
 }
 
-.card-user{
+.lista-user .card-user{
     display: flex;
+    position: relative;
     flex-direction: row;
     width: 100%;
-    height: 100px;
-    
+    min-height: 100px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.lista-user .card-user a{
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    width: 100%;
+    height: auto;
+    justify-content: start;
+    align-items: center;
+}
+
+.lista-user hr{
+    background-color: #363949;
+    width: 100%;
+    height: 2px;
+}
+
+.card-user .cont-img{
+    display: flex;
+    width: 30%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-user .cont-img img{
+    width: 80px;
+}
+
+.card-user .cont-info-user{
+    display: flex;
+    width: 70%;
+    height: 100%;
+    justify-content: start;
+    align-items: center;
+}
+
+.card-user .cont-info-user h1{
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Fredoka';
+    color: var(--color-dark);
+    text-align: start;
+}
+
+.cont-status{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.cont-status i{
+    color: var(--color-primary);
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.cont-status p{
+    font-size: 20px;
+    color: var(--color-dark);
+    font-family: 'Inter';
+
 }
