--- a/public/assets/css/info-clientes-adm.css
+++ b/public/assets/css/info-clientes-adm.css
@@ -1,3 +1,166 @@
+@font-face {
+    font-family: "Fredoka";
+    src: url("../fonts/Fredoka-VariableFont_wdth\,wght.ttf");
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url("../fonts/Inter-VariableFont_opsz\,wght.ttf");
+}
+
+:root{
+    --color-primary: #F26699;
+    --color-danger: #fd5462;
+    --color-succes: #41f1b6;
+    --color-warning: #ffa927;
+    --color-white: #fff;
+    --color-info-dark: #7d8da1;
+    --color-info-light: #dce1eb;
+    --color-dark: #363949;
+    --color-light: #848bc82e;
+    --color-dark-variant: #677483;
+    --color-primary-variant: #111e88;
+    --color-background: #f6f6f9;
+    --color-toggler: #dce1eb;
+
+
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
+
+    --card-padding: 1.8rem;
+    --padding-1: 1.2rem;
+
+    --box-shadow: 0 4rem 5rem var(--color-light);
+}
+.cont-clientes{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+    border-radius: 20px;
+    margin: 10px;
+    background-color: var(--color-white);
+}
+
+
+.cont-header-user{
+    display: flex;
+    height: 100px;
+    justify-content: start;
+    align-items: center;
+}
+
+.cont-header-user .cont-img{
+    display: flex;
+    width: 20%;
+    justify-content: start;
+    align-items: center;
+}
+
+.cont-header-user .cont-img img{
+    width: 90%;
+    object-fit: fill;
+}
+
+.cont-header-user .cont-nome{
+    display: flex;
+    width: 40%;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    height: 100%;
+}
+
+.cont-header-user .cont-nome h2{
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Fredoka';
+    text-align: start;
+}
+.cont-header-user .cont-nome h3{
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Fredoka';
+    text-align: start;
+    color: var(--color-dark);
+}
+
+.cont-header-user .cont-acoes-user{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cont-header-user .cont-acoes-user> button{
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    min-width:90px;
+    height: 50px;
+    background-color: var(--color-primary);
+    text-align: center;
+    color: var(--color-white);
+    font-family: 'Fredoka';
+    font-size: 14px;
+    font-weight: bold;
+    margin: 20px;
+    cursor: pointer;
+    transition: all ease-in-out 0.2s;
+}
+.cont-header-user .cont-acoes-user> button:hover{
+    background-color: #9e375d ;
+    transform: scale(1.04);
+}
+
+.cont-info-user{
+    display: flex;
+    flex-direction: column;
+    justify-content: start ;
+    align-items: start;
+    margin-top: 20px;
+}
+
+.cont-info-user .cont-num-user{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cont-info-user .cont-num-user >h5{
+    font-size: 14px;
+    font-family: 'Inter';
+    font-weight: bold;
+    text-align: start;
+    color: var(--color-dark);
+}
+
+.cont-info-user .cont-num-user >h5:not(:last-child){
+    margin-right: 10px;
+}
+
+.cont-info-user .cont-tipo-conta{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin-top: 20px;
+}
+.cont-info-user  h3{
+    font-size: 16px;
+    margin-top: 10px;
+    font-weight: bold;
+    font-family: 'Inter';
+    text-align: start;
+    color: var(--color-dark);
+}
+.cont-info-user  h2{
+    margin-top: 20px;
+}
 .modal form button[type='submit']{
     justify-content: center;
     align-items: center;
