--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -272,7 +272,7 @@ form button:hover{
 }
 
 .carousel-slide img {
-    width: 120%;
+    width: 100%;
     height: 100%;
 
 }
@@ -283,8 +283,8 @@ form button:hover{
     background-color: #f26699bc;
     color: white;
     position: absolute;
-    bottom: 0;
     width: 100%;
+    margin-top: 2px;
 }
 
 .fade {
