--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -35,23 +35,41 @@ body, html {
 }
 
 .carousel-container {
-    width: 100%;
-    height: 100%;
-    max-width: 950px;
-    overflow: hidden;
+    position: relative;
+    max-width: 800px;
+    margin: auto;
 }
 
 .carousel-slide {
-    height: 100%;
-    display: flex;
-    width: 290%;
-    transition: transform 0.4s ease-in-out;
+    display: none;
 }
 
 .carousel-slide img {
-    width: 35%;
-    height: auto;
+    width: 100%;
+    height: 100%;
+
 }
+
+.carousel-text {
+    text-align: center;
+    padding: 10px;
+    background-color: #f26699bc;
+    color: white;
+    position: absolute;
+    width: 100%;
+    margin-top: 2px;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 3.5s;
+}
+
+@keyframes fade {
+    from { opacity: 2 } 
+    to { opacity: 1 }
+}
+
 
 .segundo-container {
     flex: 1;
