--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -32,6 +32,7 @@ body, html {
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-color: #F26699;
 }
 
 .carousel-container {
